k8s/role-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: role-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: role
  template:
    metadata:
      labels:
        app: role
    spec:
      containers:
        - name: role
          image: mortezadanaei/gams-role:latest
---
apiVersion: v1
kind: Service
metadata:
  name: role-srv
spec:
  selector:
    app: role
  ports:
    - name: role
      protocol: TCP
      port: 3000
      targetPort: 3000
