k8s/role-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: role-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: role-mongo
  template:
    metadata:
      labels:
        app: role-mongo
    spec:
      containers:
        - name: role-mongo
          image: mongo:latest
---
apiVersion: v1
kind: Service
metadata:
  name: role-mongo-srv
spec:
  selector:
    app: role-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
