k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Exact
        path: /api/docs/users
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000     
      - pathType: Prefix
        path: /api/users/?(.*)
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000
      - pathType: Exact
        path: /api/docs/personnels
        backend:
          service:
            name: personnel-srv
            port: 
              number: 3000     
      - pathType: Prefix
        path: /api/personnels/?(.*)
        backend:
          service:
            name: personnel-srv
            port: 
              number: 3000
      - pathType: Exact
        path: /api/docs/roles
        backend:
          service:
            name: role-srv
            port: 
              number: 3000     
      - pathType: Prefix
        path: /api/roles/?(.*)
        backend:
          service:
            name: role-srv
            port: 
              number: 3000
